overflow fixing

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -136,5 +136,5 @@ mark {
 }
 
 body {
-  overflow: hidden;
+  overflow-x: hidden;
 }
